# qcom_codec2

./: .clang-format  .gitignore  CMakeLists.txt
base/: CMakeLists.txt  log.cpp  log.h  log_callback.h  signal_monitor.cpp  signal_monitor.h
src/: CMakeLists.txt  c2-module.cc  c2-module.h  c2_common.h  c2_engine.cc  c2_engine.h  c2_module.cc  c2_module.h  c2_utils.cc  c2_utils.h
test/: CMakeLists.txt  codec2_test.cc
